<resources>
    <string name="app_name">OpenWeatherApp</string>
    <string name="select_a_city">Select a city</string>
    <string name="temperature">Temperature</string>
    <string name="tempValue">%s°</string>
    <string name="humidityLabel">Humidity</string>
    <string name="humidityValue">%s%s</string>
    <string name="descriptionLabel">Description</string>
    <string name="windSpeedValue">%s%s</string>
    <string name="windspeedLabel">Windspeed</string>
    <string name="windspeedValue">%s%s</string>
    <string name="settingsButtonLabel">Settings</string>
    <string name="settingsLabel">Settings</string>
    <string name="returnLabel">Return</string>
    <string name="languageLabel">Language</string>
    <string name="number_format_Label">Number Format</string>

    <string-array name="number_format_values">
        <item value="metric">Metric</item>
        <item value="imperial">Imperial</item>
    </string-array>

    <string-array name="languages">
        <item value="en">en</item>
        <item value="ar">ar</item>
        <item value="bg">bg</item>
        <item value="ca">ca</item>
        <item value="ru">ru</item>
        <item value="ja">ja</item>
    </string-array>
    <string-array name="cities">
        <item value="townsville">Townsville</item>
        <item value="brisbane">Brisbane</item>
        <item value="sydney">Sydney</item>
        <item value="melbourne">Melbourne</item>
        <item value="adelaide">Adelaide</item>
        <item value="perth">Perth</item>
        <item value="hobart">Hobart</item>
        <item value="darwin">Darwin</item>
        <item value="london">London</item>
        <item value="copenhagen">Copenhagen</item>
    </string-array>
</resources>
