<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hfad.openweatherapp.SettingsActivity">

    <TextView
        android:id="@+id/changeCityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text="@string/select_a_city"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/locSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numberFormatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_format_Label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/formatSpinner"
        app:layout_constraintEnd_toEndOf="@+id/changeCityLabel" />

    <Spinner
        android:id="@+id/formatSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/number_format_values"
        app:layout_constraintBottom_toTopOf="@+id/langSpinner"
        app:layout_constraintStart_toStartOf="@+id/langSpinner"
        app:layout_constraintTop_toBottomOf="@+id/locSpinner" />

    <TextView
        android:id="@+id/langLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languageLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/langSpinner"
        app:layout_constraintEnd_toEndOf="@+id/numberFormatLabel" />

    <Spinner
        android:id="@+id/langSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:entries="@array/languages"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formatSpinner" />

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/settingsLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/locSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:entries="@array/cities"
        android:isScrollContainer="false"
        android:keepScreenOn="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constraintBottom_toTopOf="@+id/formatSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/formatSpinner"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabel" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="onPressReturn"
        android:text="@string/returnLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
